statum-macros/tests/ui/invalid_state_tuple_variant.stderr
error: Invalid variant `Draft` in #[state] enum. Variants must be unit or single-field tuple variants.
 --> tests/ui/invalid_state_tuple_variant.rs:8:5
  |
8 |     Draft(u32, u32),
  |     ^^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/invalid_state_tuple_variant.rs:9:2
  |
9 | }
  |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_state_tuple_variant.rs`
